# rviz

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CHANGES_FROM_WX_VERSION  CMakeLists.txt  LICENSE  README.md  VisualizationPanel.fbp  default.rviz  mainpage.dox  manifest.xml  ogre-1.7.0RC1.patch  package.xml  plugin_description.xml  rosdoc.yaml  rviz.sublime-project  setup.py  stack.xml
src/: CMakeLists.txt  mouse_watcher.cpp  mouse_watcher.h
src/default_plugin/: CMakeLists.txt  axes_display.cpp  axes_display.h  camera_display.cpp  camera_display.h  grid_cells_display.cpp  grid_cells_display.h  grid_display.cpp  grid_display.h  init.cpp  laser_scan_display.cpp  laser_scan_display.h  map_display.cpp  map_display.h  marker_display.cpp  marker_display.h  odometry_display.cpp  odometry_display.h  particle_cloud_2d_display.cpp  particle_cloud_2d_display.h  path_display.cpp  path_display.h  point_cloud2_display.h  point_cloud_base.cpp  point_cloud_base.h  point_cloud_display.cpp  point_cloud_display.h  point_cloud_transformer.h  polygon_display.cpp  polygon_display.h  pose_array_display.cpp  pose_array_display.h  pose_display.cpp  pose_display.h  robot_base2d_pose_display.cpp  robot_base2d_pose_display.h  robot_model_display.cpp  robot_model_display.h  tf_display.cpp  tf_display.h
src/default_plugin/markers/: arrow_marker.cpp  arrow_marker.h  cube_list_marker.cpp  cube_list_marker.h  line_list_marker.cpp  line_list_marker.h  line_strip_marker.cpp  line_strip_marker.h  marker_base.cpp  marker_base.h  marker_selection_handler.cpp  mesh_marker.cpp  mesh_marker.h  points_marker.cpp  points_marker.h  shape_marker.cpp  shape_marker.h  sphere_list_marker.cpp  sphere_list_marker.h  text_view_facing_marker.cpp  text_view_facing_marker.h
src/image_view/: CMakeLists.txt  image_view.cpp  image_view.h  main.cpp
src/ogre_visualizer/: common.h  display.cpp  display.h  displays_panel.cpp  displays_panel.h  factory.cpp  new_display_dialog.cpp  ogre_visualizer.i  render_panel.h  ros_topic_property.cpp  visualization_frame.cpp  visualization_manager.i  visualization_panel.cpp  visualization_panel.i
src/ogre_visualizer/displays/: axes_display.h  collision_map_display.cpp  grid_display.cpp  laser_scan_display.cpp  laser_scan_display.h  map_display.cpp  particle_cloud_2d_display.cpp  planning_display.cpp  point_cloud_base.cpp  point_cloud_display.cpp  poly_line_2d_display.cpp  poly_line_2d_display.h  polygonal_map_display.cpp  polygonal_map_display.h  robot_model_display.cpp  robot_model_display.h  tf_display.cpp  tf_display.h
src/ogre_visualizer/helpers/: color.i  robot.cpp  robot.h
src/ogre_visualizer/properties/: property.cpp
src/ogre_visualizer/tools/: pose_tool.cpp  pose_tool.h  selection_tool.h  tool.cpp
src/python_bindings/: CMakeLists.txt  typesystem.xml
src/python_bindings/rviz/: __init__.py
src/python_bindings/shiboken/: CMakeLists.txt  global.h  typesystem.xml
src/python_bindings/sip/: CMakeLists.txt  bool_property.sip  config.sip  config_map_iterator.sip  config_sequence.sip  configure.py  display.sip  display_group.sip  ogre_logging.sip  orig-string.sip  panel_dock_widget.sip  property.sip  quick_visualization_frame.sip  rviz.sip  string.sip  tool.sip  tool_manager.sip  view_controller.sip  view_manager.sip  visualization_frame.sip  visualization_manager.sip  visualization_panel.sip  yaml_config_reader.sip  yaml_config_writer.sip
src/rviz/: CMakeLists.txt  add_display_dialog.cpp  add_display_dialog.h  bit_allocator.cpp  bit_allocator.h  class_id_recording_factory.h  common.cpp  common.h  config.cpp  config.h  config_map_iterator.h  config_sequence.h  display.cpp  display.h  display.i  display_context.h  display_factory.cpp  display_factory.h  display_group.cpp  display_group.h  display_visibility_manager.cpp  display_visibility_manager.h  display_wrapper.cpp  display_wrapper.h  displays_panel.cpp  displays_panel.h  env_config.cpp.in  env_config.h  factory.cpp  factory.h  failed_display.cpp  failed_display.h  failed_panel.cpp  failed_panel.h  failed_tool.cpp  failed_tool.h  failed_view_controller.cpp  failed_view_controller.h  frame_manager.cpp  frame_manager.h  (+111 more)
src/rviz/default_plugin/: CMakeLists.txt  axes_display.cpp  axes_display.h  camera_display.cpp  camera_display.h  clicked_point_panel.cpp  clicked_point_panel.h  covariance_property.cpp  covariance_property.h  covariance_visual.cpp  covariance_visual.h  depth_cloud_display.cpp  depth_cloud_display.h  depth_cloud_mld.cpp  depth_cloud_mld.h  effort_display.cpp  effort_display.h  effort_visual.cpp  effort_visual.h  file_generate_helper.cmake  fluid_pressure_display.cpp  fluid_pressure_display.h  grid_cells_display.cpp  grid_cells_display.h  grid_display.cpp  grid_display.h  gripper_click_display.cpp  gripper_click_display.h  illuminance_display.cpp  illuminance_display.h  image_display.cpp  image_display.h  init.cpp  interactive_marker_display.cpp  interactive_marker_display.h  laser_scan_display.cpp  laser_scan_display.h  map_display.cpp  map_display.h  marker_array_display.cpp  (+56 more)
src/rviz/displays/: axes_display.cpp  axes_display.h  camera_display.cpp  camera_display.h  collision_map_display.cpp  collision_map_display.h  grid_display.cpp  (+31 more)
src/test/: CMakeLists.txt  arrow_marker_test.py  arrow_strip_marker_test.py  big-font.style  big-menus.style  cloud_test.cpp  color_editor_test.cpp  config_sample.py  config_test.cpp  connect_test.cpp  connect_test.h  cube-and-cube-list-marker.yaml  cycling_frame.py  display_test.cpp  display_test.test  displayconfig.cpp  displayconfig.h  embedded_materials_with_stl.yaml  example.py  fun_display.cpp  fun_display.h  grid_test.cpp  grid_test.h  image_test.cpp  interactive_marker_client_test.cpp  interactive_marker_test.cpp  kitchen-mesh-marker.yaml  line_edit_with_button_test.cpp  map_test.py  marker_array_test.py  marker_test.cpp  mesh_marker_test.cpp  mock_context.cpp  mock_context.h  mock_display.cpp  mock_display.h  mock_display_factory.cpp  mock_display_factory.h  mock_property_change_receiver.cpp  mock_property_change_receiver.h  (+59 more)
(+531 files in other folders)
