<package format="2">
  <name>rviz</name>
  <version>1.14.11</version>
  <description>
     3D visualization tool for ROS.
  </description>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <license>BSD</license>
  <license>Creative Commons</license>

  <author>Dave Hershberger</author>
  <author>David Gossow</author>
  <author>Josh Faust</author>
  <author email="william@osrfoundation.org">William Woodall</author>
  <url type="website">http://wiki.ros.org/rviz</url>
  <url type="repository">https://github.com/ros-visualization/rviz</url>
  <url type="bugtracker">https://github.com/ros-visualization/rviz/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libogre-dev</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <build_depend>liburdfdom-dev</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>assimp</build_depend>

  <build_export_depend>libogre-dev</build_export_depend>

  <depend>assimp-dev</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>interactive_markers</depend>
  <depend>laser_geometry</depend>
  <depend>libogre</depend>
  <depend>map_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>python_qt_binding</depend>
  <depend>resource_retriever</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tinyxml2</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>opengl</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>media_export</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
